refactor (CategoryController): change autodocs
