# app/Http/Controllers/UserController.php
@@ -42,51 +42,22 @@ class UserController extends Controller
      *             )
      *         )
      *      ),
-     *      @OA\Response(
-     *          response=200,
-     *          description="Success",
-     *          @OA\JsonContent(
-     *              @OA\Property(property="meta", type="object",
-     *                  @OA\Property(property="code", type="number", example=200),
-     *                  @OA\Property(property="status", type="string", example="success"),
-     *                  @OA\Property(property="message", type="string", example=null),
-     *              ),
-     *              @OA\Property(property="data", type="object",
-     *                  @OA\Property(property="user", type="object",
-     *                      @OA\Property(property="id", type="number", example=1),
-     *                      @OA\Property(property="name", type="string", example="John"),
-     *                      @OA\Property(property="email", type="string", example="john@test.com"),
-     *                      @OA\Property(property="email_verified_at", type="string", example=null),
-     *                      @OA\Property(property="updated_at", type="string", example="2022-06-28 06:06:17"),
-     *                      @OA\Property(property="created_at", type="string", example="2022-06-28 06:06:17"),
-     *                  ),
-     *                  @OA\Property(property="access_token", type="object",
-     *                      @OA\Property(property="token", type="string", example="randomtokenasfhajskfhajf398rureuuhfdshk"),
-     *                      @OA\Property(property="type", type="string", example="Bearer"),
-     *                      @OA\Property(property="expires_in", type="number", example=3600),
-     *                  ),
-     *              ),
+     *     @OA\Response(
+     *          response=201,
+     *          description="User created",
+     *          @OA\MediaType(
+     *              mediaType="application/json",
+     *              @OA\Schema(
+     *              type="object",
+     *                  @OA\Property(property="id", type="number", example=1),
+     *                  @OA\Property(property="name", type="string", example="John"),
+     *                  @OA\Property(property="email", type="string", example="john@test.com"),
+     *                  @OA\Property(property="email_verified_at", type="string", example=null),
+     *                  @OA\Property(property="updated_at", type="string", example="2022-06-28 06:06:17"),
+     *                  @OA\Property(property="created_at", type="string", example="2022-06-28 06:06:17"),
+     *              )
      *          )
      *      ),
-     *      @OA\Response(
-     *          response=422,
-     *          description="Validation error",
-     *          @OA\JsonContent(
-     *              @OA\Property(property="meta", type="object",
-     *                  @OA\Property(property="code", type="number", example=422),
-     *                  @OA\Property(property="status", type="string", example="error"),
-     *                  @OA\Property(property="message", type="object",
-     *                      @OA\Property(property="email", type="array", collectionFormat="multi",
-     *                        @OA\Items(
-     *                          type="string",
-     *                          example="The email has already been taken.",
-     *                          )
-     *                      ),
-     *                  ),
-     *              ),
-     *              @OA\Property(property="data", type="object", example={}),
-     *          )
-     *      )
      * )
      */
     public function register(StoreUserRequest $request)
