# storage/api-docs/api-docs.json
@@ -1,8 +1,8 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "My Cool API",
-        "description": "An API of cool stuffs",
+        "title": "Reserve",
+        "description": "API for mobile app",
         "version": "1.0.0"
     },
     "paths": {
@@ -40,50 +40,13 @@
                                 }
                             }
                         }
-                    },
-                    "422": {
-                        "description": "Validation error",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "meta": {
-                                            "properties": {
-                                                "code": {
-                                                    "type": "number",
-                                                    "example": 422
-                                                },
-                                                "status": {
-                                                    "type": "string",
-                                                    "example": "error"
-                                                },
-                                                "message": {
-                                                    "properties": {
-                                                        "email": {
-                                                            "type": "array",
-                                                            "items": {
-                                                                "type": "string",
-                                                                "example": "Error."
-                                                            },
-                                                            "collectionFormat": "multi"
-                                                        }
-                                                    },
-                                                    "type": "object"
-                                                }
-                                            },
-                                            "type": "object"
-                                        },
-                                        "data": {
-                                            "type": "object",
-                                            "example": []
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/register": {
@@ -124,121 +87,35 @@
                     }
                 },
                 "responses": {
-                    "200": {
-                        "description": "Success",
+                    "201": {
+                        "description": "User created",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "meta": {
-                                            "properties": {
-                                                "code": {
-                                                    "type": "number",
-                                                    "example": 200
-                                                },
-                                                "status": {
-                                                    "type": "string",
-                                                    "example": "success"
-                                                },
-                                                "message": {
-                                                    "type": "string",
-                                                    "example": null
-                                                }
-                                            },
-                                            "type": "object"
+                                        "id": {
+                                            "type": "number",
+                                            "example": 1
                                         },
-                                        "data": {
-                                            "properties": {
-                                                "user": {
-                                                    "properties": {
-                                                        "id": {
-                                                            "type": "number",
-                                                            "example": 1
-                                                        },
-                                                        "name": {
-                                                            "type": "string",
-                                                            "example": "John"
-                                                        },
-                                                        "email": {
-                                                            "type": "string",
-                                                            "example": "john@test.com"
-                                                        },
-                                                        "email_verified_at": {
-                                                            "type": "string",
-                                                            "example": null
-                                                        },
-                                                        "updated_at": {
-                                                            "type": "string",
-                                                            "example": "2022-06-28 06:06:17"
-                                                        },
-                                                        "created_at": {
-                                                            "type": "string",
-                                                            "example": "2022-06-28 06:06:17"
-                                                        }
-                                                    },
-                                                    "type": "object"
-                                                },
-                                                "access_token": {
-                                                    "properties": {
-                                                        "token": {
-                                                            "type": "string",
-                                                            "example": "randomtokenasfhajskfhajf398rureuuhfdshk"
-                                                        },
-                                                        "type": {
-                                                            "type": "string",
-                                                            "example": "Bearer"
-                                                        },
-                                                        "expires_in": {
-                                                            "type": "number",
-                                                            "example": 3600
-                                                        }
-                                                    },
-                                                    "type": "object"
-                                                }
-                                            },
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "422": {
-                        "description": "Validation error",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "meta": {
-                                            "properties": {
-                                                "code": {
-                                                    "type": "number",
-                                                    "example": 422
-                                                },
-                                                "status": {
-                                                    "type": "string",
-                                                    "example": "error"
-                                                },
-                                                "message": {
-                                                    "properties": {
-                                                        "email": {
-                                                            "type": "array",
-                                                            "items": {
-                                                                "type": "string",
-                                                                "example": "The email has already been taken."
-                                                            },
-                                                            "collectionFormat": "multi"
-                                                        }
-                                                    },
-                                                    "type": "object"
-                                                }
-                                            },
-                                            "type": "object"
+                                        "name": {
+                                            "type": "string",
+                                            "example": "John"
                                         },
-                                        "data": {
-                                            "type": "object",
-                                            "example": []
+                                        "email": {
+                                            "type": "string",
+                                            "example": "john@test.com"
+                                        },
+                                        "email_verified_at": {
+                                            "type": "string",
+                                            "example": null
+                                        },
+                                        "updated_at": {
+                                            "type": "string",
+                                            "example": "2022-06-28 06:06:17"
+                                        },
+                                        "created_at": {
+                                            "type": "string",
+                                            "example": "2022-06-28 06:06:17"
                                         }
                                     },
                                     "type": "object"
